--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Exercício querySelector</title>
+<style>
+.destaque {
+background-color: yellow;
+}
+</style>
+</head>
+<body>
+<h1 class="titulo">Bem-vindo ao exercício!</h1>
+<p class="descricao">Este é um parágrafo para ser modificado.</p>
+<button class="mudarTextoBotao">Mudar Texto</button>
+<button class="destacarBotao">Destacar Título</button>
+<script src="script.js"></script>
+</body>
+</html>
